--- a/app/src/main/res/layout/fragment_map_add.xml
+++ b/app/src/main/res/layout/fragment_map_add.xml
@@ -29,95 +29,239 @@
         android:background="@drawable/shadow"
         android:layout_marginTop="42dp"/>
 
-    <TextView
-        android:id="@+id/add_a_new_location_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/nunito_bold"
-        android:text="Add a new location"
-        android:textColor="@color/darkgrey"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:layout_marginTop="15dp"
-        android:visibility="gone"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/shadow">
 
-    <TextView
-        android:id="@+id/title_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="40dp"
-        android:fontFamily="@font/nunito_bold"
-        android:text="Title"
-        android:textColor="@color/darkgrey"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/add_a_new_location_name"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/title_name_edit_text"
-        android:layout_width="330dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="5dp"
-        android:paddingTop="10dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        app:cornerRadius="10dp"
-        android:hint="TITLE NAME"
-        android:textSize="20sp"
-        android:visibility="gone"
-        android:fontFamily="@font/nunito_medium"
-        android:background="@drawable/add_new_location_edit_text_border"
-        android:textColor="@color/black"
-        android:inputType="textCapSentences|textAutoCorrect"
-        app:layout_constraintTop_toBottomOf="@id/title_name"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+            <TextView
+                android:id="@+id/add_a_new_location_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/nunito_bold"
+                android:gravity="center"
+                android:text="Add a new location"
+                android:textColor="@color/darkgrey"
+                android:textSize="30sp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/description_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="40dp"
-        android:fontFamily="@font/nunito_bold"
-        android:text="Description"
-        android:textColor="@color/darkgrey"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/title_name_edit_text"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+            <TextView
+                android:id="@+id/title_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/add_a_new_location_name"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Title"
+                android:textColor="@color/darkgrey"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/description_name_edit_text"
-        android:layout_width="330dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="145dp"
-        android:paddingTop="10dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        app:cornerRadius="10dp"
-        android:hint="DESCRIPTION"
-        android:textSize="20sp"
-        android:lines="4"
-        android:maxLines="5"
-        android:minLines="1"
-        android:scrollbars="vertical"
-        android:fontFamily="@font/nunito_medium"
-        android:background="@drawable/add_new_location_edit_text_border"
-        android:textColor="@color/black"
-        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
-        app:layout_constraintTop_toBottomOf="@id/description_name"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+            <EditText
+                android:id="@+id/title_name_edit_text"
+                android:layout_width="330dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_below="@id/title_name"
+                android:paddingTop="10dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="15dp"
+                app:cornerRadius="10dp"
+                android:hint="TITLE NAME"
+                android:textSize="20sp"
+                android:fontFamily="@font/nunito_medium"
+                android:background="@drawable/add_new_location_edit_text_border"
+                android:textColor="@color/black"
+                android:inputType="textCapSentences|textAutoCorrect"/>
+
+            <TextView
+                android:id="@+id/description_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/title_name_edit_text"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Description"
+                android:textColor="@color/darkgrey"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/description_name_edit_text"
+                android:layout_width="330dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/description_name"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/add_new_location_edit_text_border"
+                android:fontFamily="@font/nunito_medium"
+                android:hint="DESCRIPTION"
+                android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
+                android:lines="4"
+                android:maxLines="5"
+                android:minLines="1"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="10dp"
+                android:scrollbars="vertical"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:cornerRadius="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/description_name" />
+
+            <TextView
+                android:id="@+id/longitude_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/description_name_edit_text"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Longitude"
+                android:textColor="@color/darkgrey"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/longitude_edit_text"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/longitude_name"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/add_new_location_edit_text_border"
+                android:fontFamily="@font/nunito_medium"
+                android:hint="LONGITUDE"
+                android:inputType="textCapSentences|textAutoCorrect"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:cornerRadius="10dp" />
+
+            <TextView
+                android:id="@+id/latitude_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/description_name_edit_text"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="115dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Latitude"
+                android:textColor="@color/darkgrey"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/latitude_edit_text"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/longitude_name"
+                android:layout_alignParentRight="true"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/add_new_location_edit_text_border"
+                android:fontFamily="@font/nunito_medium"
+                android:hint="LATITUDE"
+                android:inputType="textCapSentences|textAutoCorrect"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingRight="15dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:cornerRadius="10dp" />
+
+            <TextView
+                android:id="@+id/added_photos_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/longitude_edit_text"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="15dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Added Photos"
+                android:textColor="@color/darkgrey"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <View
+                android:id="@+id/add_photo_view"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_below="@id/added_photos_name"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/icon_add_circle_96"
+                android:backgroundTint="@color/darkgreen"
+                android:fontFamily="@font/nunito_bold"
+                android:paddingLeft="20dp"
+                android:paddingTop="20dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="20dp" />
+
+            <Button
+                android:id="@+id/cancel_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/add_photo_view"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="35dp"
+                android:backgroundTint="@color/cancelorange"
+                android:elevation="30dp"
+                android:fontFamily="@font/nunito_bold"
+                android:paddingLeft="20dp"
+                android:paddingTop="5dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="5dp"
+                android:text="CANCEL"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:cornerRadius="10dp" />
+
+            <Button
+                android:id="@+id/save_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/add_photo_view"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="35dp"
+                android:layout_marginRight="40dp"
+                android:backgroundTint="@color/lightgreen"
+                android:elevation="30dp"
+                android:fontFamily="@font/nunito_bold"
+                android:paddingLeft="40dp"
+                android:paddingTop="5dp"
+                android:paddingRight="40dp"
+                android:paddingBottom="5dp"
+                android:text="SAVE"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                app:cornerRadius="10dp" />
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
