--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -9,12 +9,10 @@
     android:clickable="true">
 
     <LinearLayout
-        android:layout_width="260dp"
+        android:id="@+id/trip_details"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:gravity="start"
-        android:orientation="vertical"
-        android:textAlignment="textStart">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +30,7 @@
                 android:gravity="start"
                 android:paddingBottom="0dp"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -43,65 +41,51 @@
             android:gravity="start"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/name_longitude"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/raleway_bold"
-                android:gravity="center|start"
-                android:text="Longitude: "
-                android:textColor="@color/white" />
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/longitude"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/name_longitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/raleway_bold"
+                    android:gravity="center|start"
+                    android:text="Longitude: "
+                    android:textColor="@color/white" />
 
-            <TextView
-                android:id="@+id/name_latitude"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/longitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/raleway_medium"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/raleway_bold"
-                android:gravity="center|start"
-                android:text="Latitude: "
-                android:textColor="@color/white" />
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/latitude"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/name_num_of_reviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/raleway_bold"
+                    android:text="No. Of Reviews - "
+                    android:textColor="@color/white" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/name_num_of_reviews"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/raleway_bold"
-                android:text="Number Of Reviews - "
-                android:textColor="@color/white" />
-
-            <TextView
-                android:id="@+id/num_of_reviews"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/num_of_reviews"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/raleway_medium"
+                    android:textColor="@color/white" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -111,37 +95,70 @@
             android:gravity="start"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/name_num_of_photos"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/raleway_bold"
-                android:text="Number of Photos - "
-                android:textColor="@color/white" />
+                android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/num_of_photos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/name_latitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/raleway_bold"
+                    android:gravity="center|start"
+                    android:text="Latitude: "
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/latitude"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/raleway_medium"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/name_num_of_photos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:fontFamily="@font/raleway_bold"
+                    android:text="No. of Photos - "
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/num_of_photos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/raleway_medium"
+                    android:textColor="@color/white" />
+            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
     <LinearLayout
+        android:id="@+id/show_trip_button"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:textAlignment="textEnd"
         android:gravity="end"
-        android:layout_marginLeft="20dp"
         android:orientation="horizontal">
-
 
         <ImageView
             style="?android:attr/borderlessButtonStyle"
             android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center|end"
             android:background="@null"
             android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
