--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -10,15 +10,14 @@
 
     <LinearLayout
         android:id="@+id/trip_details"
-        android:layout_width="250dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="25dp"
             android:layout_marginBottom="8dp"
-            android:layout_weight="1"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -44,7 +43,8 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:id="@+id/name_longitude"
@@ -98,7 +98,8 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:id="@+id/name_latitude"
