--- a/app/src/main/res/layout/trip_list_item.xml
+++ b/app/src/main/res/layout/trip_list_item.xml
@@ -112,37 +112,37 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <FrameLayout
+        android:layout_width="100dp"
         android:layout_height="match_parent"
-        android:textAlignment="textEnd"
-        android:gravity="end"
-        android:layout_marginLeft="20dp"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/image_bg"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_gravity="top|end"
-                android:background="@drawable/joe2"/>
-            <ImageView
-                android:id="@+id/image_item"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_gravity="bottom|start"/>
-        </FrameLayout>
-
+        android:orientation="vertical">
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center|end"
-            android:background="@null"
-            style="?android:attr/borderlessButtonStyle"
-            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
-    </LinearLayout>
+            android:id="@+id/image_bg"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="top|end"
+            android:background="@drawable/joe2"/>
+        <ImageView
+            android:id="@+id/image_item"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="bottom|start"/>
+    </FrameLayout>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
+
 </LinearLayout>
