--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -17,8 +17,8 @@
         android:title="@string/title_locations" />
 
     <item
-        android:id="@+id/navigation_pictures"
+        android:id="@+id/navigation_photos"
         android:icon="@drawable/ic_outline_image_24"
-        android:title="@string/title_pictures" />
+        android:title="@string/title_photos" />
 
 </menu>
