--- a/app/src/main/res/layout/location_activity.xml
+++ b/app/src/main/res/layout/location_activity.xml
@@ -218,15 +218,35 @@
             android:layout_marginBottom="30dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/photos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/nunito_bold"
-                android:text="@string/photos"
-                android:textColor="@color/darkgrey"
-                android:textSize="22sp"
-                android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/photos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/nunito_bold"
+                    android:text="@string/photos"
+                    android:textColor="@color/darkgrey"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/see_all_reviews"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/nunito_bold"
+                    android:gravity="end|bottom"
+                    android:text="See all"
+                    android:textColor="@color/lightgreen"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:clickable="true"/>
+
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/location_photos"
