--- a/app/src/main/res/layout/location_edit_review_acitivity_activity.xml
+++ b/app/src/main/res/layout/location_edit_review_acitivity_activity.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:text="@string/heading_locations"
+        android:text="@string/heading_reviews"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
