--- a/app/src/main/res/layout/location_edit_review_acitivity_activity.xml
+++ b/app/src/main/res/layout/location_edit_review_acitivity_activity.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/location_big_label"
+        android:id="@+id/review_heading"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/lightgreen"
